### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Created: Mon Feb  4 12:19:46 2013 (+0100)
## Version: 
## Last-Updated: Mon Feb  4 15:59:13 2013 (+0100)
##           By: Julien Wintz
##     Update #: 16
######################################################################
## 
### Change Log:
## 
######################################################################

enable_testing()

add_subdirectory(dtkDistributed)
