### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Created: Mon Feb  4 12:19:46 2013 (+0100)
## Version: 
## Last-Updated: Mon Feb  4 16:34:10 2013 (+0100)
##           By: Julien Wintz
##     Update #: 20
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(dtkDistributed)
