### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Created: Mon Feb  4 12:19:46 2013 (+0100)
## Version: 
## Last-Updated: Mon Feb 11 23:21:35 2013 (+0100)
##           By: Julien Wintz
##     Update #: 21
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(dtkLog)
add_subdirectory(dtkDistributed)
