### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Copyright (C) 2008-2011 - Julien Wintz, Inria.
## Created: Tue Jun 19 18:23:41 2012 (+0200)
## Version: $Id$
## Last-Updated: Tue Sep 18 09:27:10 2012 (+0200)
##           By: Julien Wintz
##     Update #: 3
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change log:
## 
######################################################################

add_subdirectory(dtkMath)
add_subdirectory(dtkCore)
add_subdirectory(dtkZip)
