### CMakeLists.txt ---
##
## Author: Nicolas Niclausse
## Copyright (C) 2014 - Nicolas Niclausse, Inria.
##
######################################################################
##
### Commentary:
##
######################################################################

add_subdirectory(dtkDistributedServer)
