### CMakeLists.txt --- 
## 
## Author: 
## Copyright (C) 2008-2011 - Julien Wintz, Inria.
## Created: Thu Sep  8 09:45:36 2011 (+0200)
## Version: $Id$
## Last-Updated: Thu Sep  8 09:47:48 2011 (+0200)
##           By: jwintz
##     Update #: 9
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change log:
## 
######################################################################

add_subdirectory(dtkDistributed)
