## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

project(dtkDeploy)

## #################################################################
## Sources
## #################################################################

set(${PROJECT_NAME}_SOURCES
  dtkDeploy.h)

set(${PROJECT_NAME}_SOURCES
  dtkDeploy.cpp
  main.cpp)

## #################################################################
## Build rules
## #################################################################

add_executable(${PROJECT_NAME}
  ${${PROJECT_NAME}_SOURCES})

qt5_use_modules(${PROJECT_NAME} Core)

## #################################################################
## Installation
## #################################################################

install(TARGETS ${PROJECT_NAME}
   BUNDLE DESTINATION bin
  RUNTIME DESTINATION bin)

######################################################################
### CMakeLists.txt ends here
